--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,7 +33,7 @@
 </body>
 <script type="text/javascript">
     $(function(){
-        var colors = ['#bd8c7d','#d1bfa7','#3a4660','#c9af98','#c9af98','#ed8a63','#845007','#21A8A3'];
+        var colors = ['#bd8c7d','#d1bfa7','#3a4660','#c9af98','#839973','#ed8a63','#845007','#21A8A3'];
         function changeColor() {
             $('.article.card').each(function (i,element) {
                 var index = parseInt(Math.random()*8);
