--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
 <div th:include="fragment::navbar"></div>
 <div class="container margin-top40">
     <div>
-        <a class="btn btn-lg writeBtn" href="/article/add"><i class="fa fa-pencil"></i>&nbsp;&nbsp; 写文章</a>
+        <a class="btn btn-lg writeBtn" href="/article/add"><i class="fa fa-pencil"></i> 写文章</a>
     </div>
     <div class="card-columns">
         <div class="article card bg-white" th:each="article:${page.getContent()}">
