--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 .writeBtn{
-    position: fixed;top:3.2em;right: 1em;
+    position: fixed;top:3.2em;right: 0.1em;z-index: 999;
 }
 
 .writeBtn:hover,.writeBtn:link,.writeBtn:visited,.writeBtn:active  {
