文章列表滑动加载插件引入

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -55,6 +55,7 @@
                 </div>
                 <div class="dropdown-menu" aria-labelledby="userBlock">
                     <a class="dropdown-item" href="/myHome#/article"><i class="fa fa-home"></i>&nbsp;&nbsp;我的主页</a>
+                    <a class="dropdown-item" href="/comment/suggestion/list"><i class="fa fa-envelope"></i>&nbsp;&nbsp;建议or留言</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/logout"><span style="color: indianred;"> <i class="fa fa-power-off"></i></span> &nbsp;&nbsp;退出</a>
                 </div>
