--- a/src/main/resources/templates/suggestion/list.html
+++ b/src/main/resources/templates/suggestion/list.html
@@ -6,38 +6,15 @@
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
-    <style type="text/css">
-        blockquote {
-            padding: 10px 20px;
-            margin: 0 0 20px;
-            font-size: 17.5px;
-            border-left: 5px solid #94785e;
-        }
-    </style>
 </head>
 <body>
 <div th:include="fragment::navbar"></div>
-<div class="container padding-top50 bg-white maxWidth650">
-    <div class="text-center">
-        <h4 th:text="${form.title}"></h4>
-    </div>
-    <div class="text-center">
-        <small class="text-muted">作者：<span th:text="${form.user.name}"></span>
-            &nbsp;&nbsp;&nbsp;
-            <span th:text="${#dates.format(form.createdTime,'yyyy/MM/dd')}"></span>
-        </small>
-    </div>
-    <hr>
-    <div>
-        <p th:utext="${form.content}"></p>
-    </div>
-</div>
-<div class="container maxWidth650" style="padding: 2em 0em;" ng-app="commentApp">
+<div class="container maxWidth650" style="padding: 5em 0em;" ng-app="commentApp">
     <!-- 评论 -->
     <div ng-controller="commentController" ng-cloak>
-        <p style="color: #fad6a6;">评论（{{comments.length}}）</p>
-        <hr class="bg-faded">
-        <div ng-repeat="comment in comments track by $index">
+        <p style="color: #fad6a6;">留言（{{comments.length}}）</p>
+        <div style="border-bottom: dashed 0.1em #866667;"></div>
+        <div ng-repeat="comment in comments | orderBy:'-createdTime' track by $index ">
             <div class="row" style="margin:1em 0em;padding-bottom:1em;border-bottom: dashed 0.1em #866667;">
                 <div class="col-md-1">
                     <img ng-src="{{comment.user.avatar}}" class="width40 height40 borderRadius50">
@@ -59,8 +36,8 @@
                         <div style="width: 8em;color: #866667;float: left;">
                             <small>{{comment.createdTime | date:'yyyy/MM/dd HH:mm'}}</small>
                         </div>
-                        <div style="width: 4em;color: #866667;float: left;cursor: pointer;">
-                            <i class="fa fa-comment-o" ng-click="showReplyForm($event)"></i><span ng-if="comment.replies.length > 0">&nbsp;({{comment.replies.length}})</span>
+                        <div style="width: 4em;color: #866667;float: left;cursor: pointer;" ng-if="currentUserRole == 'ADMIN'">
+                            <i class="fa fa-comment-o" ng-click="showReplyForm($event)"></i>
                         </div>
                         <div style="color: #866667;float: left;cursor: pointer;">
                             <i class="fa fa-trash-o" ng-if="currentUserId == comment.user.id"
@@ -81,14 +58,7 @@
                                         </div>
                                         <div class="col-lg-11">
                                             <div class="height20">
-                                                <label class="width80" style="color: #a1bad0;float: left;">{{reply.sender.name}}</label>
-                                                <div style="color:#866667;float: left;">
-                                                    <i class="fa fa-thumbs-o-up pointer"
-                                                       ng-if="!verifyReplyVote(reply.id)"
-                                                       ng-click="voteReply(reply)"></i>
-                                                    <i class="fa fa-thumbs-up" ng-if="verifyReplyVote(reply.id)"></i>
-                                                    <span ng-if="reply.vote > 0">({{reply.vote}})</span>
-                                                </div>
+                                                <label class="width80" style="color: #a1bad0;float: left;">visualLife</label>
                                             </div>
                                             <div class="minHeight20">
                                                 <p style="color: white;"><span style="color: #a1bad0;">@{{reply.accepter.name}}</span>&nbsp;&nbsp;{{reply.content}}
@@ -98,12 +68,12 @@
                                                 <div style="width: 8em;color: #866667;float: left;">
                                                     <small>{{comment.createdTime | date:'yyyy/MM/dd HH:mm'}}</small>
                                                 </div>
-                                                <div style="width: 3em;color: #866667;float: left;cursor: pointer;">
+                                                <div style="width: 3em;color: #866667;float: left;cursor: pointer;" ng-if="currentUserId == comment.user.id || currentUserRole == 'ADMIN'">
                                                     <i class="fa fa-comment-o"
                                                        ng-click="showReplyChildForm($event)"></i>
                                                 </div>
-                                                <div style="color: #866667;float: left;cursor: pointer;">
-                                                    <i class="fa fa-trash-o" ng-if="currentUserId == comment.user.id"
+                                                <div style="color: #866667;float: left;cursor: pointer;" ng-if="currentUserId == reply.user.id">
+                                                    <i class="fa fa-trash-o"
                                                        ng-click="removeReply(reply.id,comment.replies,$index)"></i>
                                                 </div>
                                                 <div class="clearfix"></div>
@@ -134,7 +104,7 @@
         <div class="bg-white">
             <form name="commentForm">
                 <div>
-                    <textarea rows="3" class="form-control" ng-maxlength="500" placeholder="你的评论……" required
+                    <textarea rows="3" class="form-control" ng-maxlength="500" placeholder="你的建议or留言……" required
                               ng-model="newComment.content"></textarea>
                 </div>
                 <div>
@@ -152,8 +122,8 @@
     var commentApp = angular.module('commentApp', []);
     commentApp.controller('commentController', function ($scope, $http) {
         $scope.comments = [];
-        var targetId = [[${form.id}]];
-        var targetType = 'ARTICLE';
+        var targetId = null;
+        var targetType = 'SUGGESTION';
         $http.get('/comment/list', {
             params: {
                 page: 0,
@@ -162,6 +132,7 @@
                 targetId: targetId
             }
         }).success(function (data) {
+            console.log(data);
             if (data.code) {
                 $scope.comments = data.data.content;
             } else {
@@ -177,7 +148,8 @@
         };
 
         $scope.currentUserId = [[${session.user != null ? session.user.id : -1}]];
-
+        $scope.currentUserRole = [[${session.user != null ? session.user.role : ''}]];
+        console.log($scope.currentUserRole);
         $scope.saveComment = function () {
             $http.post('/comment/add', $scope.newComment).success(function (data) {
                 if (data.code) {
