--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -75,6 +75,7 @@
     </script>
 </div>
 <div th:fragment="tooltip">
+    <link rel="stylesheet" type="text/css" href="/static/css/x0popup.min.css">
     <style type="text/css">
         .common_tooltip {
             visibility: hidden;
@@ -128,6 +129,7 @@
             </tr>
         </table>
     </div>
+    <script type="text/javascript" src="/static/js/x0popup.min.js"></script>
     <script type="text/javascript">
         var Tooltip = {
             tip: $('.common_tooltip'),
