--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -22,6 +22,7 @@
 .maxWidth300{max-width: 30em;}
 .maxWidth400{max-width: 40em;}
 .maxWidth500{max-width: 50em;}
+.maxWidth600{max-width: 60em !important;}
 .maxWidth650{max-width: 65em !important;}
 .maxWidth700{max-width: 70em;}
 .maxWidth800{max-width: 80em;}
